# yew_onselection_example

./: Cargo.toml  dev.sh
src/: lib.rs
static/: index.html
